--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,5 +1,5 @@
 @import "theme-colors.scss";
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;400;500;600;700&family=Source+Serif+Pro:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&display=swap');
 $theme-colors: (
   "primary": $primary,
   "dark": $dark,
@@ -14,7 +14,7 @@ $theme-colors: (
 );
 
 
-$font-family-base: 'IBM Plex Sans';
+$font-family-base: 'Roboto', sans-serif;
 $body-bg: $white;
 @import 'bootstrap/bootstrap.scss';
 @import 'typography.scss';
