feat(table): :sparkles: Smart Table Search

--- a/src/@shared/components/pagination/pagination.component.html
+++ b/src/@shared/components/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center justify-content-center mt-10 w-100">
+<div class="d-flex align-items-center justify-content-end mt-10 w-100">
 	<div class="d-flex align-items-center mre-8">
 		<div class="text-gray1 size-4 max-120 w-100 text-nowrap mre-4">Rows per page: </div>
 		<select class="form-select" aria-label="rows per page" (change)="RowsPerPage($event)"
