--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,4 @@
-<smart-table [settings]="settings" [data]="currentData"></smart-table>
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <app-pagination [count]="data?.length" 
-                            (rows)="rows($event)" 
-                            (p)="paginate($event)" 
-                            [currentPageItems]="currentData?.length"
-            ></app-pagination>
-        </div>
-    </div>
-</div>
+<ng-container *ngIf="data">
+    <smart-table [settings]="settings" [data]="data"></smart-table>
+</ng-container>
+
