--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
+<div class="text-center size-50 text-dark wieght-900 d-flex justify-content-center align-items-cetner mrt-40">Khazna</div>
 <ng-container *ngIf="data">
     <smart-table [settings]="settings" [data]="data"></smart-table>
 </ng-container>
-
+<div class="mrb-80"></div>
