--- a/src/assets/style/_generics.scss
+++ b/src/assets/style/_generics.scss
@@ -18,3 +18,24 @@ $i: 0;
 // 	display: none;
 // }
   
+::-webkit-input-placeholder {
+	/* Chrome/Opera/Safari */
+	font-size: 0.875rem;
+	font-weight: 500;
+}
+::-moz-placeholder {
+	/* Firefox 19+ */
+	font-size: 0.875rem;
+	font-weight: 500;
+}
+:-ms-input-placeholder {
+	/* IE 10+ */
+	font-size: 0.875rem;
+	font-weight: 500;
+}
+:-moz-placeholder {
+	/* Firefox 18- */
+	/* height: 19px; */
+	font-size: 0.875rem;
+	font-weight: 500;
+}
